feat: maritime, space and cyber boards, pages and templates
